Enhance StoneGAT bibliography entry with new fields
Added additional fields to the bibliography entry for StoneGAT, including HTML link, BibTeX visibility, and preview image.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,10 @@
   language = {eng},
   keywords = {Edge attribute, fall detection, graph attention network, pose estimation, posture recognition},
   abstract = {Robust fall detection is critical in safety-sensitive contexts such as elderly care and industrial environments. Recent fall detection methods leverage 2D human pose estimation, which encodes posture as compact skeletal keypoints. However, these systems are vulnerable to performance degradation when body parts are occluded or keypoints are missing, often due to environmental constraints or inaccuracies in pose estimation. To address this, we propose a fall detection framework based on single-frame 2D human pose estimation and a skeleton-aware graph attention network (StoneGAT). StoneGAT enhances conventional graph attention network (GAT) by incorporating edge features based on bone-related information, such as bone lengths, joint angles, and confidence-based metrics. In addition, we introduce a training strategy named PointOut, which probabilistically drops node features during training to encourage structure-aware learning, thereby improving model robustness. Experiments on a combined dataset of AI-hub and in-house dataset demonstrate that StoneGAT with PointOut outperforms baseline models, including standard MLP, graph convolutional network (GCN) and GAT, especially under severe occlusion. Ablation studies confirm the effectiveness of edge attributes and the PointOut strategy.},
-  selected={true}
+  html={https://doi.org/10.1007/s12555-025-0546-z},
+  bibtex_show={true},
+  selected={true},
+  preview={stonegat.png}
 }
 
 @INPROCEEDINGS{stonegat_iccas,
