Change preview image format from PNG to JPG

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   html={https://doi.org/10.1007/s12555-025-0546-z},
   bibtex_show={true},
   selected={true},
-  preview={stonegat.png}
+  preview={stonegat.jpg}
 }
 
 @INPROCEEDINGS{stonegat_iccas,
