--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,6 +59,7 @@ preview={vssmfpn.png}
   volume = {74},
   number = {1},
   pages = {127-134},
+  month = {Jan},
   year = {2025},
   issn = {1975-8359},
   doi = {https://doi.org/10.5370/KIEE.2025.74.1.127},
