Add month field to bibliography entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,7 @@
   booktitle={2025 25th International Conference on Control, Automation and Systems (ICCAS)}, 
   title={StoneGAT: Skeleton-aware Graph Attention Networks for Robust Fall Detection from Single-frame Poses}, 
   year={2025},
+  month={Nov},
   volume={},
   number={},
   pages={},
