Add month field to bibliography entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,6 +43,7 @@ volume = {31},
 number = {7},
 pages = {797-801},
 year = {2025},
+month = {Jul},
 issn = {1976-5622},
 doi = {https://doi.org/10.5302/J.ICROS.2025.25.0119},
 author = {Sangyun Lee},
